# glsl-optimizer

./: .dir-locals.el  .gitignore  .travis.yml  Android.common.mk  Android.mk  CMakeLists.txt  Changelog.md  CleanSpec.mk  Make-config  Makefile  Makefile.DJ  Makefile.X11  Makefile.am  Makefile.mgw  Makefile.wfx  Mesa.dsw  README  README.md  SConstruct  TODO  VERSION  acinclude.m4  ast.h  ast_expr.cpp  ast_function.cpp  ast_to_hir.cpp  ast_type.cpp  autogen.sh  binding.gyp  buildMyProjects.bat  builtin_function.cpp  builtin_types.h  builtin_types.sh  builtin_variables.h  common.py  configure.ac  descrip.mms  gen_xcode.command  generate.bat  generateMyProjects.sh  (+77 more)
include/GL/: Makefile.am  amesa.h  dmesa.h  foomesa.h  fxmesa.h  ggimesa.h  gl.h  gl_mangle.h  glcorearb.h  glew.h  glext.h  glfbdev.h  glu.h  glu_mangle.h  glut.h  glut_h.dja  glutf90.h  glx.h  glx_mangle.h  glxew.h  glxext.h  mesa_wgl.h  mglmesa.h  miniglx.h  osmesa.h  svgamesa.h  uglmesa.h  vms_x_fix.h  wglext.h  wmesa.h  xmesa.h  xmesa_x.h  xmesa_xf86.h
include/GL/internal/: dri_interface.h  dri_sarea.h  glcore-new.h  glcore.h  sarea.h
src/: .gitignore  Makefile  Makefile.am  SConscript  descrip.mms  glsl_optimizer.gyp  glsl_optimizer.qbs  glsl_optimizer_lib.gyp
src/driclient/include/: driclient.h
src/driclient/src/: Makefile  XF86dri.c  driclient.c  test  test.c
src/egl/: Makefile  Makefile.am
src/egl/docs/: EGL_MESA_screen_surface
src/egl/drivers/: Makefile  Makefile.am  Makefile.template
src/egl/main/: .gitignore  Android.mk  Makefile  Makefile.am  Makefile.sources  SConscript  egl.pc.in  eglapi.c  eglapi.h  eglarray.c  eglarray.h  eglcompiler.h  eglconfig.c  eglconfig.h  eglconfigutil.c  eglconfigutil.h  eglcontext.c  eglcontext.h  eglcurrent.c  eglcurrent.h  egldefines.h  egldisplay.c  egldisplay.h  egldriver.c  egldriver.h  eglfallbacks.c  eglglobals.c  eglglobals.h  eglhash.c  eglhash.h  eglimage.c  eglimage.h  egllog.c  egllog.h  eglmisc.c  eglmisc.h  eglmode.c  eglmode.h  eglmutex.h  eglscreen.c  (+10 more)
src/egl/wayland/: .gitignore  Makefile  wayland-egl-priv.h  wayland-egl.c  wayland-egl.pc.in
src/gallium/: Android.common.mk  Android.mk  Automake.inc  Makefile  Makefile.am  Makefile.template  README.portability  SConscript
src/gallium/aux/: Makefile
src/gallium/auxiliary/: Android.mk  Makefile  Makefile.am  Makefile.sources  SConscript
src/gallium/docs/: d3d11ddi.txt  llvm-todo.txt  make.bat
src/gallium/drivers/: .gitignore  Makefile  Makefile.am
src/gallium/state_trackers/: Makefile  Makefile.am
src/gallium/targets/: Makefile.am  Makefile.dri  Makefile.egl  Makefile.va  Makefile.vdpau  Makefile.xorg  Makefile.xvmc  SConscript  SConscript.dri  dri-vdpau.dyn  dri.sym  omx.sym  vdpau.sym  xvmc.sym
src/gallium/winsys/: Makefile  Makefile.am  SConscript
src/gbm/: .gitignore  Makefile  Makefile.am  gbm-symbols-check
src/gbm/backends/: Makefile  Makefile.template
src/gbm/main/: Makefile  backend.c  gbm.c  gbm.h  gbm.pc.in  gbmint.h
src/getopt/: SConscript
src/gles/: Makefile
src/glew/: Makefile  SConscript  glew.c  glewinfo.c
src/glsl/: .gitignore  Android.gen.mk  Android.mk  Makefile  Makefile.am  Makefile.sources  README  SConscript  TODO  ast.h  ast_array_index.cpp  ast_expr.cpp  ast_function.cpp  ast_to_hir.cpp  ast_type.cpp  builtin_function.cpp  builtin_functions.cpp  builtin_type_macros.h  builtin_types.cpp  builtin_types.h  builtin_variables.cpp  builtin_variables.h  coalesce_floats.cpp  coalesce_temps.cpp  configure.ac  glsl_lexer.cpp  glsl_lexer.ll  glsl_lexer.lpp  glsl_optimizer.cpp  glsl_optimizer.h  glsl_optimizer_main.cpp  glsl_parser.cpp  glsl_parser.h  glsl_parser.ypp  glsl_parser.yy  glsl_parser_extras.cpp  glsl_parser_extras.h  glsl_symbol_table.cpp  glsl_symbol_table.h  glsl_types.cpp  (+153 more)
src/glsl/apps/: .gitignore  Makefile  (+6 more)
src/glu/: .gitignore  Makefile  descrip.mms  glu.pc.in
src/glw/: GLwDrawA.c  GLwDrawA.h  GLwDrawAP.h  GLwMDrawA.c  GLwMDrawA.h  GLwMDrawAP.h  Makefile  Makefile.X11  README  boilerplate.c  depend  glw.pc.in
src/glx/: .gitignore  Makefile  Makefile.am  SConscript  XF86dri.c  applegl_glx.c  clientattrib.c  clientinfo.c  compsize.c  create_context.c  dri2.c  dri2.h  dri2_glx.c  dri2_priv.h  dri2_query_renderer.c  dri3_common.c  dri3_glx.c  dri3_priv.h  dri_common.c  dri_common.h  dri_common_query_renderer.c  dri_glx.c  dri_sarea.h  drisw_glx.c  drisw_priv.h  glcontextmodes.c  glcontextmodes.h  glx_error.c  glx_error.h  glx_pbuffer.c  glx_query.c  glxclient.h  glxcmds.c  glxconfig.c  glxconfig.h  glxcurrent.c  glxext.c  glxextensions.c  glxextensions.h  indirect.c  (+18 more)
src/gtest/: .gitignore  Makefile.am
src/hgl/: GLDispatcher.cpp  GLRendererRoster.cpp  SConscript
src/libXvMC/: Makefile  block.c  context.c  subpicture.c  surface.c
src/loader/: Android.mk  Makefile.am  Makefile.sources  SConscript  loader.c  loader.h  pci_id_driver_map.c  pci_id_driver_map.h
src/mapi/: Android.mk  Makefile.am  Makefile.sources  entry.c  entry.h  entry_x86-64_tls.h  entry_x86_tls.h  entry_x86_tsd.h  mapi.c  mapi.h  mapi_abi.py  mapi_glapi.c  stub.c  stub.h  table.c  table.h  u_compiler.h  u_current.c  u_current.h  u_execmem.c  u_thread.h
src/mesa/: .gitignore  Android.gen.mk  Android.libmesa_dricore.mk  Android.libmesa_glsl_utils.mk  Android.libmesa_st_mesa.mk  Android.mesa_gen_matypes.mk  Android.mk  Makefile  Makefile.BeOS  Makefile.DJ  Makefile.OSMesa16  Makefile.X11  Makefile.am  Makefile.mgw  Makefile.old  Makefile.solo  Makefile.sources  Makefile.wfx  SConscript  descrip.mms  gl.pc.in  glesv1_cm.pc.in  osmesa.pc.in  sources  sources.mak
src/node/: binding.cpp  compiler.cpp  compiler.h  shader.cpp  shader.h
src/talloc/: SConscript  talloc.c  talloc.def
src/util/: Android.mk  Makefile.am  Makefile.sources  SConscript  format_srgb.h  format_srgb.py  hash_table.c  hash_table.h  macros.h  ralloc.c  ralloc.h  register_allocate.c  texcompress_rgtc_tmp.h
src/xvmc/: Makefile  SConscript  attributes.c  block.c  context.c  subpicture.c  surface.c  xvmc_private.h
swc/: CMakeLists.txt  exports.txt  swc.cpp
tests/glx/: .gitignore  Makefile.am
(+13436 files in other folders)
